--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/CSS/style.css">
-    <title>jibble jabber</title>
+    <title>Jibble Jabber</title>
 </head>
 <body>
     <nav>
