--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -5,7 +5,7 @@
 nav{
     background-color: rgb(1, 83, 1);
     color: white;
-    height: 15vh;
+    min-height: 15vh;
 }
 
 h2{
@@ -15,11 +15,15 @@ h2{
     padding: 15px;
 }
 
-a {
+.content a {
     text-decoration: none;
     color: black;
+    width: 5vw;
 }
 
+.content a:hover{
+    color: blue;
+}
 nav a{
     padding-top: 120px;
     text-decoration: none;
@@ -31,7 +35,7 @@ nav a{
 
 .content{
     background-color: rgb(243, 232, 210);
-    height:78vh ;
+    min-height:78vh ;
     padding-left: 20px;
     font-family:Arial, Helvetica, sans-serif;
 }
@@ -40,7 +44,7 @@ footer{
     color: white;
     text-align: center;
     padding-top: 10px;
-    height: 7vh;
+    min-height: 7vh;
     font-family:Arial, Helvetica, sans-serif;
 }
 
@@ -61,7 +65,9 @@ td{
     padding-bottom: 10px;
     padding-right: 10px;
 }
-
+input,textarea{
+    padding: 6px;
+}
 label{
     font-size: small;
 }
@@ -74,4 +80,22 @@ label{
 
 form{
     padding-top:20px;
+}
+
+button{
+    padding: 5px;
+    min-width: 70px;
+    background-color: rgb(1, 83, 1);
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.formclass{
+    display: flex;
+   justify-content: center;
+}
+.formheader{
+    text-align: center;
+    padding-top: 20px;
 }
