--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -3,7 +3,8 @@
     padding: 0;
 }
 nav{
-    background-color: rgb(1, 83, 1);
+    background-color:  rgb(0, 66, 30);
+  width: 100%;
     color: white;
     min-height: 15vh;
 }
@@ -34,13 +35,14 @@ nav a{
 }
 
 .content{
-    background-color: rgb(243, 232, 210);
+    background-color: #D7CEC7;
     min-height:78vh ;
     padding-left: 20px;
     font-family:Arial, Helvetica, sans-serif;
 }
 footer{
-    background-color: rgb(1, 83, 1);
+    background-color:  rgb(0, 66, 30);
+  width: 100%;
     color: white;
     text-align: center;
     padding-top: 10px;
