--- a/StoryApp_Mongo/public/css/style.css
+++ b/StoryApp_Mongo/public/css/style.css
@@ -78,3 +78,93 @@ td{
 input, textarea{
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.signup-container{
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.signup-sub-container-1{
+  display: flex;
+  justify-content: center;
+  background-color: white;
+  padding: 10px;
+  width: 40%;
+}
+form{
+  width: 70%;
+}
+input{
+  height: 25px;
+  border:1px solid gray;
+  border-radius: 5px;
+  width: 100%;
+}
+
+button{
+  background-color: rgb(0, 66, 30);
+  color: white;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+  min-width: 100px;
+}
+
+.star{
+  color: red;
+}
+
+.login-container{
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.login-sub-container{
+  display: flex;
+  justify-content: center;
+  background-color: white;
+  padding: 10px;
+  width: 40%;
+}
+.flashmsg{
+  display: flex;
+  justify-content: center;
+  margin-top: 3px;
+}
+.error{
+  background-color: rgb(214, 75, 75);
+  color:white;
+  padding: 10px 10px;
+  width:100%;
+  text-align:center;
+  
+}
+.success{
+  background-color: rgb(44, 169, 44);
+  color:white;
+  padding: 10px 10px;
+  width:100%;
+  text-align:center;
+}
+
+.flashclose{
+  float: right;
+  margin-right: 10px;
+  cursor: pointer;
+}
+.closeflashmsg{
+  display: none;
+}
+
+.profileheader{
+  margin-left: 50px;
+  margin-top: 30px;
+}
+
+.profilename{
+  color:rgb(146, 66, 221)
+}
